# OpenAI-compatible-server

./: .env.example  README.md  pyproject.toml
examples/: custom_backend.py
src/openai_compatible/: __main__.py  api.py  build.py  config.py  init_backend.py  init_env.py  logging.py
src/openai_compatible/backends/: base.py  custom.py  demo.py
src/openai_compatible/clients/: common.py  http.py  openai_sdk.py
src/openai_compatible/services/: completions.py
src/openai_compatible_server/: __init__.py  __main__.py  api.py  init_backend.py  init_env.py  logging.py  schemas.py
src/openai_compatible_server/backends/: __init__.py  base.py  custom.py  demo.py  factory.py
src/openai_compatible_server/clients/: __init__.py  http.py  openai_sdk.py
src/openai_compatible_server/services/: __init__.py  completions.py
tests/: conftest.py  test_api.py  test_backend.py  test_backend_factory.py  test_build.py  test_clients.py  test_config.py  test_init_backend.py  test_init_env.py  test_schemas.py
