[project]
name = "openai-compatible-server"
version = "0.1.0"
description = "Extensible OpenAI-compatible multimodal Chat Completions server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10",
    "fastapi>=0.115",
    "httpx>=0.27",
    "loguru>=0.7",
    "openai>=1.60",
    "pydantic>=2.10",
    "requests>=2.32",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
openai-compatible-server = "openai_compatible.__main__:main"
openai-compatible-http-client = "openai_compatible.clients.http:main"
openai-compatible-sdk-client = "openai_compatible.clients.openai_sdk:main"
openai-compatible-build-wheel = "openai_compatible.build:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openai_compatible"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
